--- a/_posts/2017-07-27-managing-users.html
+++ b/_posts/2017-07-27-managing-users.html
@@ -5,10 +5,10 @@ cover:  assets/images/team.jpg
 navigation: True
 title: Managing Ghost users
 date: 2017-07-27 07:00:00
-tags: [Getting started]
+tags: [blog-tech]
 class: post-template
 subclass: 'post tag-getting-started'
-author: ghost
+author: jnan
 ---
 
 <p>Ghost has a number of different user roles for your team</p>
