--- a/_posts/2017-07-27-private-sites.html
+++ b/_posts/2017-07-27-private-sites.html
@@ -5,10 +5,10 @@ cover:  assets/images/locked.jpg
 navigation: True
 title: Making your site private
 date: 2017-07-27 06:00:00
-tags: [Getting started]
+tags: [blog-tech]
 class: post-template
 subclass: 'post tag-getting-started'
-author: ghost
+author: jnan
 ---
 
 <p>Sometimes you might want to put your site behind closed doors</p>
