--- a/reads/index.html
+++ b/reads/index.html
@@ -12,7 +12,7 @@
 
         <script>
             var today = new Date();
-            var month = today.getMonth() - 1;
+            var month = today.getMonth();
             var year = today.getFullYear();
             setTimeout(function(){
                 window.location.href='http://jnan.co/what-i-am-reading-' + month + '_' + year + '.html'; // The URL that will be redirected too.
