--- a/tools/displaysim/index.html
+++ b/tools/displaysim/index.html
@@ -1966,6 +1966,15 @@ function applyImportedData(data) {
         // --- End of added JavaScript code ---
 
     </script>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7P5YFV6K4E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-7P5YFV6K4E');
+    </script>
 
 </body>
 </html>
