--- a/tools/displaysim/v60.html
+++ b/tools/displaysim/v60.html
@@ -21,41 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone"rel="stylesheet">
     <!-- Add html2pdf library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <style>
-        /* Styles for Configuration section toggle button */
-        details#configDetailsElement > summary {
-            display: flex; /* Ensures flex layout */
-            justify-content: space-between; /* Pushes button to the right */
-            align-items: center;
-            /* If your style.css already makes summary flex, this just reinforces/overrides justify-content */
-        }
 
-        details#configDetailsElement > summary .summary-main-content {
-            display: flex;
-            align-items: center;
-            gap: 8px; /* Adjust to match existing gap between icon and text if different */
-        }
-
-        .summary-toggle-btn {
-            background: none;
-            border: none;
-            color: var(--md-text-secondary-on-background, rgba(0, 0, 0, 0.6)); /* Fallback color */
-            cursor: pointer;
-            padding: 0;
-            margin: 0 0 0 8px; /* Left margin for spacing */
-            box-shadow: none;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            width: 28px;
-            height: 28px;
-            transition: background-color 0.2s ease, color 0.2s ease;
-        }
-        .summary-toggle-btn:hover { background-color: rgba(0, 0, 0, 0.08); color: var(--md-text-primary-on-background, rgba(0, 0, 0, 0.87)); }
-        body.dark-mode .summary-toggle-btn:hover { background-color: rgba(255, 255, 255, 0.1); }
-        .summary-toggle-btn .material-symbols-outlined { font-size: 20px; }
-    </style>
 </head>
 <body>
 
@@ -78,17 +44,7 @@
         </div>
     </header>
 
-    <div class="left-panel panel">
-        <details open id="configDetailsElement">
-            <summary>
-                <span class="summary-main-content">
-                    <span class="material-symbols-outlined">tune</span>
-                    <span>Configuration</span>
-                </span>
-                <button type="button" id="toggleConfigBtn" class="summary-toggle-btn" title="Collapse Section">
-                    <span class="material-symbols-outlined">unfold_less</span>
-                </button>
-            </summary>
+    <div class="left-panel panel"> <details open> <summary><span class="material-symbols-outlined">tune</span> Configuration</summary>
              <div class="details-content">
                  <div class="flex-row"> <div class="flex-grow"> <label for="configResolution">Resolution:</label> <select id="configResolution"> <option value="128x64">128 x 64</option> <option value="128x160" selected>128 x 160</option> <option value="135x240">135 x 240</option> <option value="160x128">160 x 128</option> <option value="240x135">240 x 135</option> <option value="240x240">240 x 240</option> <option value="240x320">240 x 320</option> <option value="320x240">320 x 240</option> <option value="480x320">480 x 320</option><option value="960x540">960 x 540</option>  </select> </div> </div>
                  <div class="flex-row"> <div class="flex-grow">  <label for="customWidth">Custom Width:</label>  <input type="number" id="customWidth" placeholder="e.g., 480" min="1"> </div> <div class="flex-grow"> <label for="customHeight">Custom Height:</label> <input type="number" id="customHeight" placeholder="e.g., 320" min="1"> </div> <button id="addCustomResolution">Add</button> </div>
@@ -798,7 +754,7 @@
             const height = parseInt(customHeightInput.value);
 
             if (!width || !height || width <= 0 || height <= 0) {
-                alert('Ensure Valid Width and Height are provided! Adter adding your custom resolutio, it should appear at the end of the dropdown.');
+                alert('Please enter valid width and height values.');
                 return;
             }
 
@@ -809,7 +765,7 @@
                 .find(option => option.value === resolution);
                 
             if (existingOption) {
-                alert('This resolution already exists! Select it from the dropdown.');
+                alert('This resolution already exists!');
                 return;
             }
 
@@ -1800,35 +1756,6 @@ function applyImportedData(data) {
             });
         }
 
-        // --- Configuration Section Toggle Button ---
-        const configDetailsElement = document.getElementById('configDetailsElement');
-        const toggleConfigBtn = document.getElementById('toggleConfigBtn');
-
-        if (configDetailsElement && toggleConfigBtn) {
-            const toggleConfigBtnIcon = toggleConfigBtn.querySelector('.material-symbols-outlined');
-
-            function updateConfigToggleButtonState() {
-                if (configDetailsElement.open) {
-                    toggleConfigBtnIcon.textContent = 'unfold_less';
-                    toggleConfigBtn.title = 'Collapse Section';
-                } else {
-                    toggleConfigBtnIcon.textContent = 'unfold_more';
-                    toggleConfigBtn.title = 'Expand Section';
-                }
-            }
-
-            toggleConfigBtn.addEventListener('click', (event) => {
-                event.preventDefault(); // Prevent summary's default toggle
-                event.stopPropagation(); // Stop bubbling to summary
-                configDetailsElement.open = !configDetailsElement.open;
-            });
-
-            configDetailsElement.addEventListener('toggle', updateConfigToggleButtonState);
-
-            // Initial state setup
-            updateConfigToggleButtonState();
-        }
-        // --- End Configuration Section Toggle Button ---
     </script>
 
 </body>
