Added Version Info & Codename

--- a/tools/displaysim/index.html
+++ b/tools/displaysim/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <ul id="elementList"></ul>
                 <p style="font-size: 0.8em; color: var(--md-text-secondary-on-background); text-align: center; margin-top: auto; padding-top: 20px;">
-                    This Software is Free and Open Source Software licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL 3.0</a>
+                    Release v6.2.Sindoor. This Software is Free and Open Source Software licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL 3.0</a>
     
                 </p>
             </div>
