--- a/tools/esphomelvglsim/index.html
+++ b/tools/esphomelvglsim/index.html
@@ -1244,14 +1244,43 @@ function updateWidgetSpecificProperties(widgetData, element) {
 
         // --- Keyboard Shortcuts ---
         document.addEventListener('keydown', (event) => {
-            // Delete selected widget with Delete/Backspace key
-            if (selectedWidget && (event.key === 'Delete' || event.key === 'Backspace')) {
-                // Prevent default browser action for Backspace (navigation)
-                // especially if an input field within properties panel is not focused.
-                const activeElement = document.activeElement;
-                if (activeElement.tagName !== 'INPUT' && activeElement.tagName !== 'TEXTAREA') {
+            const activeElement = document.activeElement;
+            const isEditingText = activeElement.tagName === 'INPUT' || activeElement.tagName === 'TEXTAREA';
+
+            if (selectedWidget) {
+                if (!isEditingText && (event.key === 'Delete' || event.key === 'Backspace')) {
+                    // Delete selected widget
                     event.preventDefault();
                     deleteWidgetById(selectedWidget.dataset.widgetId);
+                } else if (!isEditingText && event.key.startsWith('Arrow')) {
+                    // Move selected widget with arrow keys
+                    event.preventDefault(); // Prevent scrolling
+                    const widgetData = widgetsOnCanvas.find(w => w.id === selectedWidget.dataset.widgetId);
+                    if (!widgetData) return;
+
+                    let dx = 0;
+                    let dy = 0;
+
+                    if (event.key === 'ArrowLeft') dx = -1;
+                    else if (event.key === 'ArrowRight') dx = 1;
+                    else if (event.key === 'ArrowUp') dy = -1;
+                    else if (event.key === 'ArrowDown') dy = 1;
+
+                    if (dx !== 0 || dy !== 0) {
+                        widgetData.x = (widgetData.x || 0) + dx;
+                        widgetData.y = (widgetData.y || 0) + dy;
+
+                        // Ensure widget stays within canvas bounds (optional, but good practice)
+                        // widgetData.x = Math.max(0, Math.min(widgetData.x, canvas.clientWidth - (widgetData.width || 0)));
+                        // widgetData.y = Math.max(0, Math.min(widgetData.y, canvas.clientHeight - (widgetData.height || 0)));
+
+                        selectedWidget.style.left = `${widgetData.x}px`;
+                        selectedWidget.style.top = `${widgetData.y}px`;
+
+                        updatePropertiesPanel(); // To reflect new X, Y in the panel
+                        updateCodeOutput();
+                        saveStateToLocalStorage();
+                    }
                 }
             }
         });
